back to main poem

--- a/poem.html
+++ b/poem.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <!-- load the poem representation that you have modified -->
-        <script src="./iceland.js"></script>
+        <script src="./poem.js"></script>
         <!-- magic: create tooltips from any `meta` info attached to a given element -->
         <link href="./tooltip.css" rel="stylesheet"/>
         <!-- css: modify this file so that it displays the poem as you desire -->
